# csv_processing_demo

./: .envrc  README.md  TODO.md  main.py  pyproject.toml  review.md
src/csv_processing/: __init__.py  csv_loader.py  main.py  report_performance.py
tests/integration/: test_main.py
tests/integration/data/: empl_integration_01.csv  empl_integration_02.csv  empl_integration_03.csv
tests/unit/: conftest.py  test_csv_loader.py  test_report_performance.py
tests/unit/data/: inconsistent.csv
